k8s-rancher/apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-shortlived
spec:
  ingressClassName: traefik
  rules:
  - host: hello-world.hello-world.rancher.k8s.renklus.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
  tls:
  - hosts:
    - hello-world.hello-world.rancher.k8s.renklus.ch
    secretName: hello-world-tls
